Implements song list display per artist
Adds functionality to display a list of songs associated with a specific artist.
Fetches song data from the server based on the artist name passed as a query parameter.
Updates the UI to display the list of songs using Material list components.
Refactors the project structure to have proper folder for main content

--- a/Client/src/app/pages/main/main.html
+++ b/Client/src/app/pages/main/main.html
@@ -1,1 +1,4 @@
-<app-artists/>
+<mat-drawer-container class="main_app_container">
+  <mat-drawer mode="side" opened>Drawer content</mat-drawer>
+  <mat-drawer-content>Main content</mat-drawer-content>
+</mat-drawer-container>
