--- a/Client/src/app/pages/list/list.html
+++ b/Client/src/app/pages/list/list.html
@@ -1,1 +1,10 @@
-<p>list works!</p>
+<div class="main_container">
+  <mat-list>
+    @for (song of songs_list; track index; let index = $index) {
+      <mat-list-item class="song_list_item">
+        {{ index }} - {{ song }}
+      </mat-list-item>
+      <div class="spacer"></div>
+    }
+  </mat-list>
+</div>
