--- a/Client/src/app/pages/main/main.html
+++ b/Client/src/app/pages/main/main.html
@@ -1,4 +1,14 @@
 <mat-drawer-container class="main_app_container">
   <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-  <mat-drawer-content>Main content</mat-drawer-content>
+  <mat-drawer-content>
+    <mat-toolbar class="nav_bar_container">
+      <div>
+        
+      </div>
+      <div>
+
+      </div>
+    </mat-toolbar>
+    <app-songs/>
+  </mat-drawer-content>
 </mat-drawer-container>
