--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -7,18 +7,19 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;font-optical-sizing: auto;
 }
 
-body {
+html, body {
+  height: 100%;
+  width: 100%;
   background-color: var(--secondary-color);
   color: var(--primary-colour);
+  margin: 0;
+  padding: 0;
 }
 
-mat-drawer-container {
-  height: calc(100dvh - 75px) !important;
-  width: 100dvw !important;
-}
-
-mat-drawer {
-  background-color: var(--sidebar-colour) !important;
-  color: var(--primary-colour) !important;
-  width: 200px !important;
+app-root {
+  display: block !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 100% !important;
+  width: 100% !important;
 }
