Refactors server API and adds playlist support
This commit restructures the server API endpoints for improved organization and maintainability. It introduces dedicated modules for handling artists, songs, and images.

Adds support for playlists, including endpoints for retrieving public and private playlists, as well as their respective totals.

The client is also updated to consume the new API structure, featuring a side drawer navigation, playlist support and updated data fetching.
A vcpkg submodule is also created for external c++ dependancies for rusty_ffmpeg.

artist image loading broken

--- a/Client/src/app/pages/main/songs/songs.html
+++ b/Client/src/app/pages/main/songs/songs.html
@@ -3,7 +3,7 @@
     @for (song of songs_data; track index; let index = $index) {
       <mat-card class="card" (click)="playSong(song)">
         @if (!isCoverLoading(song)) {
-          <img [src]="getCoverUrl(song)" alt="" />
+          <img [src]="getCoverUrl(song)" alt="{{song.name}} by {{song.artist}} cover" />
         } @else {
           <div class="image-skeleton"></div>
         }
