--- a/Client/src/app/pages/main/main.css
+++ b/Client/src/app/pages/main/main.css
@@ -1,7 +1,8 @@
 .main_app_container {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100vh;
   margin: 0;
+  overflow-x: hidden;
 }
 
 mat-drawer {
@@ -9,14 +10,76 @@ mat-drawer {
   color: var(--primary-colour) !important;
   width: 200px !important;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
+mat-drawer h1 {
+  margin: 0;
+  padding: 0;
+}
+
+mat-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+mat-list-item {
+  width: 100%;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .nav_bar_container {
   background-color: var(--sidebar-colour) !important;
   border-radius: 15px;
   margin: 0 10px 5px 5px;
-  width: 99%;
+  width: calc(100% - 15px);
+  max-width: calc(100vw - 220px);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
 
+.menu_button {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  background-color: transparent;
+  border: none;
+  color: var(--primary-colour);
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.menu_button:hover {
+  color: var(--primary-colour-hover) !important;
+  text-decoration: 3px var(--accent-colour) underline;
+}
+
+.menu_button fa-icon {
+  margin-right: 10px;
 }
 
 ::-webkit-scrollbar {
@@ -35,4 +98,28 @@ mat-drawer {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary-colour-hover);
+}
+
+#search {
+  background-color: var(--primary-colour-hover);
+  border: none;
+  border-radius: 15px;
+  width: 300px;
+  height: 30px;
+  font-size: 15px;
+}
+
+#search:hover, #search:active, #search:focus{
+  background-color: var(--primary-colour);
+  outline: none;
+}
+
+#profile {
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+}
+
+#profile:hover {
+  box-shadow: var(--accent-colour) 0 0 10px;
 }
