--- a/Client/src/app/pages/main/main.css
+++ b/Client/src/app/pages/main/main.css
@@ -1,6 +1,10 @@
+.main_container {
+  display: flex;
+  flex-direction: column;
+}
 .main_app_container {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   margin: 0;
   overflow-x: hidden;
 }
