Enables PWA features, improves styling & add Music Player
Adds service worker for offline support and performance improvements.
Migrates styles to SCSS and introduces base styling.
Upgrades Angular dependencies for compatibility.

--- a/Client/src/app/component/music-player/music-player.html
+++ b/Client/src/app/component/music-player/music-player.html
@@ -1,6 +1,14 @@
 <div class="player_container">
-  <mat-slider>
-    <input matSliderThumb>
-  </mat-slider>
-  <audio></audio>
+  <div>
+    <button mat-button (click)="previous()"><fa-icon [icon]="faBackward"/></button>
+    <button mat-button (click)="togglePlaying()"><fa-icon [icon]="isPlaying()"/></button>
+    <button mat-button (click)="next()"><fa-icon [icon]="faForward"/></button>
+    <mat-slider [min]="0" [max]="duration" [(ngModel)]="bar_progress" (ngModelChange)="onSliderChange($event)">
+      <input matSliderThumb>
+    </mat-slider>
+    <h1>{{time}}</h1>
+  </div>
+  <div>
+    <button mat-button (click)="toggleMute()"><fa-icon [icon]="isMute()"/></button>
+  </div>
 </div>
