--- a/Client/src/app/pages/main/main.html
+++ b/Client/src/app/pages/main/main.html
@@ -1,7 +1,7 @@
 <div class="main_container">
   <mat-drawer-container class="main_app_container">
     <mat-drawer mode="side" opened>
-      <h1 style="color: var(--accent-colour); font-size: 48px;">Muse</h1>
+      <h1 class="logo">Muse</h1>
       <mat-list>
         <mat-list-item>
           <button class="menu_button" (click)="setPage('home')"><fa-icon [icon]="faHome"/> Home</button>
