--- a/Client/src/app/pages/list/list.scss
+++ b/Client/src/app/pages/list/list.scss
@@ -1,19 +1,23 @@
+@use '../../../styles.scss' as *;
+
 .main_container {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .song_list_item {
-  background-color: var(--sidebar-colour);
+  background-color: $panel-colour;
   border-radius: 15px;
   width: inherit !important;
-}
 
-.song_list_item:hover {
-  box-shadow: var(--accent-colour) 0 0 10px;
-  color: var(--primary-colour-hover);
+  &:hover {
+    box-shadow: $accent-colour 0 0 10px;
+    color: $primary-colour-hover;
+  }
 }
 
 .spacer {
