Refactors music player and artist details
This commit refactors the music player component to use a service for image loading.
It also introduces an artist detail page and enhances song searching.

Removes unused components and routes to clean up the application.
Fixes playlist creation.
Improves the main page layout.

--- a/Client/src/app/component/add-to-playlist-popup/add-to-playlist-popup.html
+++ b/Client/src/app/component/add-to-playlist-popup/add-to-playlist-popup.html
@@ -1,5 +1,5 @@
 <div class="popup">
-  @if (add_to_not_create) {
+  @if (data.create_new_playlist) {
     <h1 mat-dialog-title class="colour_text">Add Song To Playlist</h1>
     <mat-dialog-content class="colour_text">
       <mat-form-field>
