--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -7,7 +7,7 @@ $theme: mat.define-theme((
     theme-type: dark,
   ),
   typography: (
-    brand-family: 'Roboto, Arial, sans-serif',
+    brand-family: 'Arial, sans-serif',
   )
 ));
 
