--- a/Client/src/app/pages/shared/card.scss
+++ b/Client/src/app/pages/shared/card.scss
@@ -14,6 +14,9 @@
 
 .card_container {
   display: grid;
+  min-height: 325px;
+  text-align: center;
+  height: 100%;
   width: 95%;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 10px 10px;
